[project]
name = "claude-wrapped"
version = "0.1.15"
description = "Your year with Claude Code - Spotify Wrapped style terminal experience"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Mert Deveci", email = "mert@banker.so" },
    { name = "Daniel Tollefsen" }
]
keywords = ["claude", "anthropic", "cli", "wrapped", "stats", "terminal", "analytics", "export", "claude-code", "2025", "2026", "2027"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/da-troll/claude-wrapped"
Repository = "https://github.com/da-troll/claude-wrapped"
Issues = "https://github.com/da-troll/claude-wrapped/issues"

[project.scripts]
claude-wrapped = "claude_code_wrapped.main:main"
claude-code-wrapped = "claude_code_wrapped.main:main"  # Alias for backward compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_wrapped"]
